# codex-everything-mcp

./: README.md  pyproject.toml  server.py
src/codex_everything_mcp/: __init__.py  sdk.py  server.py
tests/: test_sdk.py
