[project]
name = "codex-everything-mcp"
version = "0.1.0"
description = "Codex MCP server backed by the Everything SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp",
]

[project.scripts]
codex-everything-mcp = "codex_everything_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
